--- a/src/Repository.css
+++ b/src/Repository.css
@@ -34,6 +34,13 @@
   margin: 0 15px 0 0;
 }
 
+.landing-page .section p {
+  margin-top: 0;
+  line-height: 16px;
+  font-size: 16px;
+  font-weight: 200;
+}
+
 .Repository p {
   font-size: 15px;
   line-height: 1;
@@ -48,4 +55,9 @@
 .module-search-number {
   padding: 5px;
   background: rgb(142, 150, 170);
+}
+
+/* Parallax overrides */
+.landing-page .parallax-small {
+  height: 80px;
 }
