Add dictionaries/Strongs section with screenshot and text

--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -1166,7 +1166,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
     border-radius: 10px;
    }
 
-   .landing-page .section-demo .row:first-child{
+   .landing-page .section-demo .row:not(:last-child){
     margin-bottom: 100px;
    }
 
