Add repository search bar

--- a/src/Repository.css
+++ b/src/Repository.css
@@ -71,6 +71,10 @@
   border-radius: 0;
 }
 
+.modules-search-input {
+  margin: 20px auto;
+}
+
 /* .flex-center {
   display: flex;
   justify-content: center;
