Add modal images; Fix line height

--- a/src/Repository.css
+++ b/src/Repository.css
@@ -34,7 +34,7 @@
   margin: 0 15px 0 0;
 }
 
-.landing-page .section p {
+.landing-page .section .modules-list p {
   margin-top: 0;
   line-height: 16px;
   font-size: 16px;
