Fix close modal image issue

--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -1153,7 +1153,7 @@ a:focus, a:active {
   margin-top: 50px;
 }
 
-.landing-page .section-demo a{
+.landing-page .section-demo p a{
   margin-top: 20px;
 }
 
