--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: "Helvetica Neue", "Open Sans", Arial, sans-serif;
 }
+
+@media screen and (max-width: 768px) {
+  .tutorial-video {
+    width: 100%;
+  }
+}
